organise the code

--- a/EasyPeasyDataSciense_WB.ipynb
+++ b/EasyPeasyDataSciense_WB.ipynb
@@ -576,7 +576,9 @@
     {
       "cell_type": "code",
       "source": [
-        "model.compile(loss= config[\"loss\"], optimizer= config[\"optimizer\"], metrics= config[\"metrics\"])"
+        "model.compile(loss= config[\"loss\"],\n",
+        "              optimizer= config[\"optimizer\"],\n",
+        "              metrics= config[\"metrics\"])"
       ],
       "metadata": {
         "id": "mVkb_CPZlzKq"
@@ -598,7 +600,11 @@
     {
       "cell_type": "code",
       "source": [
-        "model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=config['epochs'], batch_size = config['batch_size'], callbacks=[WandbCallback()])"
+        "model.fit(X_train, y_train,\n",
+        "          validation_data= (X_test, y_test),\n",
+        "          epochs= config['epochs'],\n",
+        "          batch_size = config['batch_size'],\n",
+        "          callbacks= [WandbCallback()])"
       ],
       "metadata": {
         "colab": {
